--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "nodemon": "^1.18.4"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "https://raphael-pics-server.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
